--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,45 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  body {
+    color: #333; /* Dark text color for better readability */
+    background-color: #fff5f0; /* Light peach background */
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer components {
+  .menuLink {
+    @apply cursor-pointer hover:text-[#c5c5c5];
+  }
+
+  .tags {
+    background-color: #ffb3b3; /* Soft peach background for tags */
+    margin-right: 0.5rem;
+    margin-top: 0.5rem;
+    padding: 3px 10px;
+    display: inline-block;
+    color: white;
+    font-size: 12px;
+    border-radius: 5px; /* Add rounded corners for better aesthetics */
+    font-weight: 500;
+  }
+
+  .tags:last-child {
+    margin-right: 0px;
+  }
+
+  /* Tag color changes */
+  .tags:nth-child(2) {
+    background-color: #f9c6e2; /* Light pink */
+  }
+
+  .tags:nth-child(3) {
+    background-color: #ff9b8e; /* Warm coral */
+  }
+
+  .tags:nth-child(4) {
+    background-color: #ff8a69; /* Light orange */
+  }
 }
