--- a/src/components/Emoji/Emoji.module.css
+++ b/src/components/Emoji/Emoji.module.css
@@ -50,7 +50,7 @@
   .reviewText {
     margin-top: 2rem;
     font-size: 1rem;
-    color: #3a4250; /* Dark gray */
+    color: black; /* Dark gray */
   }
   
   .reviewTextDark {
