--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,7 +3,7 @@
 /* Container for the footer */
 .footer-container {
     margin-top: 2rem;
-    background-color: #ff7f50;
+    background-color:black;
     padding-top: 2.25rem;
   }
   
