--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 /* Navbar.module.css */
 .navbar {
-  background-color: #ff7f50; /* Coral color */
+  background-color: black; /* Coral color */
 }
 
 .logo {
