--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -9,7 +9,7 @@
   
   .skills-subheading {
     font-weight: bold;
-    color: #FF9966;
+    color: black;
   }
   
   .skill-bar {
@@ -35,7 +35,7 @@
   .skill-label {
     font-size: 1rem;
     font-weight: 600;
-    color: #A6A6A6;
+    color: black;
   }
   
   .skill-percentage {
